corrige caminho da logo do LIPCAT

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="hero-logos">
             <img src="Assets/Photos and Logos/EQ.png" alt="Escola de Química" />
             <img src="Assets/Photos and Logos/UFRJ.png" alt="UFRJ" />
-            <img class="logo-lipcat" src="Assets/Photos and Logos/Lipcat Logo.PNG" alt="LIPCAT" />
+            <img class="logo-lipcat" src="Assets/Photos and Logos/Lipcat Logo.png" alt="LIPCAT" />
           </div>
           <div class="cta-row">
             <a class="primary-btn" href="#experiencia" data-i18n="hero.cta.primary">Ver trajetória</a>
